gateway-api-manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app-alb-gateway
  namespace: default
spec:
  gatewayClassName: aws-alb-gateway-class

  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: app-gw-lbconfig
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.quanldl.click"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.quanldl.click"
      allowedRoutes:
        namespaces:
          from: All
